# comprehensive-curriculum-design-of-data-analysis

./: README.md  pyproject.toml
clustering/: main.ipynb
node-ranking/: main.ipynb  networks.drawio  networks.json  sequence-pairs.json
random-forest/: main.ipynb
recommendation-system/: README.md
