[tool.poetry]
name = "comprehensive-curriculum-design-of-data-analysis"
version = "0.0.0"
description = ""
license = "CC-BY-NC-SA-4.0"
authors = ["Yuwang Cai <mrcaidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"

[tool.poetry.group.dev.dependencies]
notebook = "^7.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
