[tool.poetry]
name = "comprehensive-curriculum-design-of-data-analysis"
version = "0.0.0"
description = ""
license = "CC-BY-NC-SA-4.0"
authors = ["Yuwang Cai <mrcaidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
